namespace SpellFlinger.Enum
{
    public enum PlayerAnimationState
    {
        Idle = 1,
        RunForward = 2,
        StrafeForwardRight = 3,
        StrafeForwardLeft = 4,
        StrafeRight = 5,
        StrafeLeft = 6,
        RunBack = 7,
        StrafeBackRight = 8,
        StrafeBackLeft = 9,
        Jumping = 10,
        Dead = 11,
        Attack = 12,
    }
}
